# ZeroStyleChessBot

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  chess_bot.py  chess_engine_vs_zero_style.py  human_vs_machine.py  parallel_train.py  requirements.txt  supervised_learning.py  train.py
cpp_chess_env/: build_engine.sh  install_cmake.sh  new_engine.cpp  pending_improvements.txt  pgn_debug.py
cpp_chess_env/debug_scripts/: chess_debug.py  indices_to_move_test.py  speed_test.py  testing_check_move.py  testing_pawn_upgrades.py
engine_c/: chess_debug.py  chess_required_functionality.md  compile_python_library.sh  engine.c  engine.cpp  new_engine.cpp  pending_improvements.txt  python_c_chess_library.py  speed_test.py
neural_nets/: chess_nn_funcs.py  conv_net.py  generic_net.py  loading_test.py  self_play_test.py  supervised_learning.py
neural_nets/data/: analyse_experience.py  data_sources.md  get_winners_dist.py  plot_values.py  process_pgns.py
neural_nets/data/fen_chess_puzzles/: apply_first_move.py  curiculum_maker.py  get_rid_of_excess_csv_columns.py  keep_first_250000.py  puzzle_type_spread.py  shuffle_csv.sh  shuffle_pickled_data.py  starting_states.py  testing_network_on_easy_games.py
tree/: engine_interface.py  evaluator.py  memory.py  node.py  parallel_game_tree.py  trainer.py  tree.py
util/: chess_functions.py  parallel_error_log.py  parallel_profiler.py  queues.py  test_fen_strings.py  timing.py  training_monitor.py
zero_style_chess_engine/: __init__.py  engine_interface.py  evaluator.py  memory.py  parallel_game_tree.py  trainer.py
(+3 files in other folders)
